2004-10-06  JP Rosevear  <jpr@novell.com>
 
 	Fixes #66164
 	
 	* e-cell-date-edit.c (e_cell_date_edit_get_popup_pos): replicate
 	fix to e-cell-combo.c by NotZed
	
2004-10-01  Not Zed  <NotZed@Ximian.com>

	* e-util-marshal.list: added boolean object boxed.

	* e-source-selector.c (class_init): add new 'popup event' signal,
	to replace fill_popup_menu.
	(selector_button_press_event): emit a POPUP_EVENT rather than a
	FILL_POPUP_MENU.

2004-09-13  Rodney Dawes  <dobey@novell.com>

	* e-multi-config-dialog.c (impl_response):
	Point at "config-prefs" instead of "config" for the help section

2004-08-03  JP Rosevear  <jpr@novell.com>

	* Makefile.am: Really dist the pilot sources this time

2004-08-03  JP Rosevear  <jpr@novell.com>

	* Makefile.am: Dist the pilot sources

2004-08-01  JP Rosevear  <jpr@novell.com>

	* e-pilot-settings.c (e_pilot_settings_get_source): accessor
	(e_pilot_settings_set_source): ditto
	(build_ui): show the source option menu
	(e_pilot_settings_new): use above

	* e-pilot-settings.h: add prototypes

2004-07-20  JP Rosevear  <jpr@novell.com>

	* Makefile.am: build pilot setting

2004-07-26  JP Rosevear  <jpr@novell.com>
 
 	* e-search-bar.c (setup_bonobo_menus): use ctrl-shift-q to clear
 	search bar
	
2004-07-20  Not Zed  <NotZed@Ximian.com>

	* e-error.c: include config.h.  See #61395.

2004-07-20  JP Rosevear  <jpr@novell.com>

	* e-source-selector.h: remove proto

	* e-source-selector.c (selection_func): don't force the item to be
	checked
	(cell_toggled_callback): allow the cell to be untoggled even if
	its primary
	(init): set the pixbuf renderable
	(e_source_selector_set_toggle_selection): no longer necessary

2004-07-16  Chris Toshok  <toshok@ximian.com>

	* e-clipped-label.c (e_clipped_label_recalc_chars_displayed):
	remove debug spew and fix the display when
	pango_layout_line_x_to_index returns FALSE (before we were drawing
	both the ellipses and the text).

2004-07-12  Jeffrey Stedfast  <fejj@novell.com>
